stopped background image from shifting when mobile keyboard opens

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,11 @@ body {
   /* background-image: url('/img/pink_angora_01.jpg'); */
   background-size: cover;
 }
+@media only screen and (max-width: 575px) {
+  body {
+    background-size: contain;
+  }
+}
 
 #root {
   display: flex;
